[package]
name = "crypto_payment_detector"
version = "0.2.0"
edition = "2024"

[lib]
name = "crypto_payment_detector"
path = "src/lib.rs"

[[bin]]
name = "crypto_payment_detector"
path = "src/main.rs"

[[bin]]
name = "crypto_payment_api"
path = "src/api.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "gzip", "rustls", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dotenvy = "0.15.7"
rayon = "1.10"
axum = "0.8"

[dev-dependencies]

[[example]]
name = "webhook_server"
path = "examples/webhook_server.rs"
